--- a/index.html/index.html
+++ b/index.html/index.html
@@ -8,19 +8,39 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="icon" type="image/png" href="/favicon.png">
     <meta property="og:title" content="Whitepeace">
-<meta property="og:type" content="website">
-<meta property="og:url" content="http://site.com">
-<meta property="og:image" content="http://site.com/image/screen.png">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="normalize.css">
-<link rel="stylesheet" href="style.css">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://site.com">
+    <meta property="og:image" content="http://site.com/image/screen.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/css/normalize.css">
+    <link rel="stylesheet" href="css/css/style.css">
     <title>Whitepace</title>
 </head>
 
 <body>
-    Тестовый документ
+    <header class="header header--blue">
+        <div class="u-container header__flex">
+            <div class="header__logo">
+                <img src="svg/logo.svg" alt="logo" />
+            </div>
+            <div class="header__nav">
+                <nav class="nav">
+                    <a class="nav__item" href="#">Products <img src="images/svg/arrow-down.svg" alt="down" /></a>
+                    <a class="nav__item" href="#">Solutions <img src="images/svg/arrow-down.svg" alt="down" /></a>
+                    <a class="nav__item" href="#">Resources <img src="images/svg/arrow-down.svg" alt="down" /></a>
+                    <a class="nav__item" href="#">Pricing <img src="images/svg/arrow-down.svg" alt="down" /></a>
+                </nav>
+            </div>
+            <div class="header__button">
+
+                <a class="btn" href="#">Login</a></
+                <a class="btn" href="#">Try Whitepace free/a>
+
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
